@@ -1,3 +1,10 @@
+1999-08-09  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>
+
+	* fvwm/screen.h: 
+	* fvwm/borders.c: fixed 'LeftJustified' flag for title style.
+	There seems to be a flag conflict. THe title style flags should really
+	be rewritten in GSFR style to avoid further conflicts.
+
 1999-08-08  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* fvwm/borders.c (SetShape): applied fix for ShapeNotify events on non
